# flora

./: .gitignore  CLAUDE.md  README.md  TODO.md  flake.nix
agent/: nursery.toml
docs/: about.md  package.json
docs/.vitepress/: config.ts
docs/design/: iris-brainstorm.md  iris.md  prior-art.md  servers-brainstorm.md
docs/iris/: index.md
docs/projects/: index.md  wisteria.md
habitat/: .gitignore  Cargo.toml
habitat/crates/rhi-zone-habitat-core/: Cargo.toml
habitat/crates/rhi-zone-habitat-core/src/: error.rs  lib.rs  object.rs  store.rs
habitat/crates/rhi-zone-habitat-server/: Cargo.toml
habitat/crates/rhi-zone-habitat-server/src/: main.rs
habitat/docs/: architecture.md
habitat/web/: index.html  jsconfig.json  package.json  vite.config.js
habitat/web/src/: App.css  App.jsx  CommandPalette.jsx  Settings.jsx  bindings.js  main.jsx
iris/: init.lua
iris/.spore/: config.toml
iris/iris/: format.lua  history.lua  prompts.lua
keybinds/: jsconfig.json  package.json
keybinds/docs/: index.md  package.json
keybinds/docs/.vitepress/: config.ts
keybinds/docs/guide/: commands.md  components.md  context.md  index.md  styling.md
keybinds/docs/reference/: components.md  index.md
keybinds/src/: components.js  index.js  matchers.js
keybinds/styles/: palette.css
lotus/web/: package.json
lotus/web/src/: App.css  App.jsx  CommandPalette.jsx  Settings.jsx  bindings.js
wisteria/: init.lua  nursery.toml
wisteria/wisteria/: commands.lua  context.lua  parser.lua  risk.lua  roles.lua  session.lua
