[package]
name = "rhi-zone-habitat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core object store for Habitat - unified object graph"
repository = "https://github.com/rhi-zone/zone"

[dependencies]
libsql = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt"] }
