[package]
name = "rhi-zone-habitat-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP + WebSocket server for Habitat object store"
repository = "https://github.com/rhi-zone/zone"

[[bin]]
name = "habitat"
path = "src/main.rs"

[dependencies]
rhi-zone-habitat-core = { path = "../rhi-zone-habitat-core" }
trellis = { git = "https://github.com/rhi-zone/server-less", features = ["http", "ws"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
